# Vehicle-thermal-management-bench

./: R290台架控制系统方案.docx  README.md
Upper computer/: README.md
Vehicle-thermal-management/: CMakeLists.txt  Vehicle-thermal-management.code-workspace  Vehicle-thermal-management.yct
Vehicle-thermal-management/CMSIS/Core/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h
Vehicle-thermal-management/app/: FreeRTOSConfig.h  main.c
Vehicle-thermal-management/app/Input_capture/: Input_capture.c  Input_capture.h
Vehicle-thermal-management/app/LIN/: LIN.c  LIN.h  LIN_device_control.c  LIN_device_control.h
Vehicle-thermal-management/app/PWM/: PWM.c  PWM.h
Vehicle-thermal-management/app/Task/: Task.c  Task.h
Vehicle-thermal-management/app/UART/: UART.c  UART.h
Vehicle-thermal-management/app/UART/printf/: printf.c  printf.h
Vehicle-thermal-management/board/: YTM32B1ME0_flash.ld  YTM32B1ME0_ram.ld  clock_config.c  clock_config.h  dma_config.c  dma_config.h  etmr_config.c  etmr_config.h  interrupt_config.c  interrupt_config.h  linflexd_lin_config.c  linflexd_lin_config.h  linflexd_uart_config.c  linflexd_uart_config.h  pin_mux.c  pin_mux.h  sdk_project_config.h
Vehicle-thermal-management/cmake/: armac5.cmake  armac6.cmake  config.cmake  configCore.cmake  configLib.cmake  gcc.cmake  generate.cmake  iccarm.cmake
Vehicle-thermal-management/cmake/Toolchain/: GCC.cmake  Tools.cmake
Vehicle-thermal-management/platform/devices/: callbacks.h  devassert.h  device_registers.h  floats.h  startup.c  startup.h  status.h
Vehicle-thermal-management/platform/devices/YTM32B1ME0/include/: YTM32B1ME0.h  YTM32B1ME0_features.h
Vehicle-thermal-management/platform/devices/YTM32B1ME0/startup/: system_YTM32B1ME0.c  system_YTM32B1ME0.h
Vehicle-thermal-management/platform/devices/YTM32B1ME0/startup/gcc/: YTM32B1ME0_startup_gcc.S
Vehicle-thermal-management/platform/devices/common/: core_common.h
Vehicle-thermal-management/platform/drivers/inc/: clock.h  clock_manager.h  dma_driver.h  interrupt_manager.h  linflexd_lin_driver.h  linflexd_uart_driver.h  pins_driver.h
Vehicle-thermal-management/platform/drivers/inc/etmr/: etmr_common.h  etmr_ic_driver.h  etmr_pwm_driver.h
Vehicle-thermal-management/platform/drivers/src/clock/YTM32B1Mx/: clock_YTM32B1Mx.c  clock_YTM32B1Mx.h  ipc_hw_access.h  scu_hw_access.h
Vehicle-thermal-management/platform/drivers/src/clock/YTM32B1Mx/doxygen/: clock_YTM32B1Mx.dox
Vehicle-thermal-management/platform/drivers/src/dma/: dma_driver.c  dma_hw_access.c  dma_hw_access.h  dma_irq.c  dma_irq.h
Vehicle-thermal-management/platform/drivers/src/dma/doxygen/: dma_driver.dox
Vehicle-thermal-management/platform/drivers/src/etmr/: etmr_common.c  etmr_hw_access.c  etmr_hw_access.h  etmr_ic_driver.c  etmr_pwm_driver.c
Vehicle-thermal-management/platform/drivers/src/interrupt/: interrupt_manager.c
Vehicle-thermal-management/platform/drivers/src/interrupt/doxygen/: interrupt.dox
Vehicle-thermal-management/platform/drivers/src/linflexd/: linflexd_hw_access.h  linflexd_lin_driver.c  linflexd_lin_irq.c  linflexd_lin_irq.h  linflexd_uart_driver.c  linflexd_uart_irq.c  linflexd_uart_irq.h
Vehicle-thermal-management/platform/drivers/src/pins/: pins_driver.c  pins_gpio_hw_access.h  pins_port_hw_access.c  pins_port_hw_access.h
Vehicle-thermal-management/platform/drivers/src/pins/doxygen/: pins.dox
Vehicle-thermal-management/rtos/osif/: osif.h  osif_baremetal.c
(+10 files in other folders)
